add bottom link to github

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 
                 </form>
               </nav>
+
+              <p>
+                <a href="https://github.com/AngelikiClever/Angeliki-SheCodes">Open-source code</a> by Angeliki Zeaki
+              </p>
               <script src="src/index.js"></script>
   </body>
   
