--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="container">
           <div class="row">
             <div class="col-2">
+              <span id=today>
                 <h1>
                     📍Athens
                 
@@ -30,6 +31,7 @@
                       src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                       alt="clear"
                       id="icon">
+                      </span>
             </div>
             
           </div> 
