--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <body>
       <div class="container">
+        <div class="weatherapp">
           <div class="row">
             <div class="col">
               
@@ -101,6 +102,7 @@
               <p>
                 <a href="https://github.com/AngelikiClever/Angeliki-SheCodes">Open-source code</a> by Angeliki Zeaki
               </p>
+              </div>
               <script src="src/index.js"></script>
   </body>
   
