--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                       <a id="celsius-link">°C</a>  </span> </h3>
                       </div>
                       <div class="col">
+                        <div class="weathericon">
                       <img
                       src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                       alt="clear"
                       id="icon">
-                      
+                      </div>
             </div>
             
           </div> 
