--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                       src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                       alt="clear"
                       id="icon">
+                      <div class="wind">
+                        Wind 🌬 : 
+                      </div>
+                      <div class="precipitation">
+                        Precipitation ☂️ :
+                      </div>
                       </div>
             </div>
             
