add humidity, speed and description

--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
                       src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                       alt="clear"
                       id="icon">
+                      <div id="weatherdescription">
+                        Sunny
+                      </div>
                       <div class="wind">
-                        Wind 🌬 : 
+                        Wind 🌬 : <span id="windspeed">17%</span>
                       </div>
                       <div class="precipitation">
-                        Precipitation ☂️ :
+                        Precipitation ☂️ : <span id="precipitationvalue">17%</span>
                       </div>
                       </div>
             </div>
