--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                       src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                       alt="clear"
                       id="icon">
-                      <div id="weatherdescription">
-                        Sunny
+                      <div class="description">
+                        <span id="weatherdescription">
+                        Sunny</span>
                       </div>
                       <div class="wind">
                         Wind 🌬 : <span id="windspeed">17%</span>
