update new functions

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                       <div class="wind">
                         Wind 🌬 : <span id="windspeed">17%</span>
                       </div>
-                      <div class="precipitation">
-                        Precipitation ☂️ : <span id="precipitationvalue">17%</span>
+                      <div class="humidity">
+                        Humidity 💧 : <span id="humidityvalue">17%</span>
                       </div>
                       </div>
             </div>
