finish humidity, speed, description

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         Sunny</span>
                       </div>
                       <div class="wind">
-                        Wind 🌬 : <span id="windspeed">17%</span>
+                        Wind 🌬 : <span id="windspeed">1</span>km/h
                       </div>
                       <div class="humidity">
-                        Humidity 💧 : <span id="humidityvalue">17%</span>
+                        Humidity 💧 : <span id="humidityvalue">17</span>%
                       </div>
                       </div>
             </div>
