--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                       </div>
                       </div>
                       <div class="col">
+                        <div class="iconcolumn"
                         <div class="weathericon">
                       <img
                       src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
@@ -42,10 +43,11 @@
                         Sunny</span>
                       </div>
                       <div class="wind">
-                        Wind 🌬 : <span id="windspeed">1</span>km/h
+                        Wind 🌬 : <span id="windspeed">1</span> km/h
                       </div>
                       <div class="humidity">
                         Humidity 💧 : <span id="humidityvalue">17</span>%
+                      </div>
                       </div>
                       </div>
             </div>
