--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                   <h3> <span id=degrees>18 </span>
                     <span id="units">
                       <a id="celsius-link">°C</a>  </span> </h3>
+                      <span id="weatherdescription">, Sunny</span>
                       </div>
                       </div>
                       <div class="col">
@@ -36,10 +37,7 @@
                       src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                       alt="clear"
                       id="icon">
-                      <div class="description">
-                        <span id="weatherdescription">
-                        Sunny</span>
-                      </div>
+                     
                       <div class="wind">
                         Wind 🌬 : <span id="windspeed">1</span> km/h
                       </div>
