--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                 
                   <h3> <span id=degrees>18 </span>
                     <span id="units">
-                      <a id="celsius-link">°C</a>  </span> </h3>
+                      <a id="celsius-link">°C</a>  </span> 
                       <span id="weatherdescription">, Sunny</span>
+                      </h3>
                       </div>
                       </div>
                       <div class="col">
