--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="row">
             <div class="col">
               <div class=cityblock>
-                <h1> <span id="city">📍Athens</span></strong>, <span id="currentdate"></span>
+                <h1> <span id="city">📍Athens</span>, <span id="currentdate"></span>
                   
                 
                   </h1>
