--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <nav class="navbar navbar-light bg-light">
                 <form id="search-form" class="form-inline">
-                  <input id= city class="form-control mr-sm-2" type="search" placeholder="🔎 Search City" aria-label="Search">
+                  <input id= searchcity class="form-control mr-sm-2" type="search" placeholder="🔎 Search City" aria-label="Search">
                   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Go!</button>  
                   <button id="current" class="btn btn-outline-success my-2 my-sm-0" type="submit">Current</button>
 
