--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
                     <span id="units">
                       <a id="celsius-link">°C,</a>  </span> 
                       <span id="weatherdescription">Sunny</span>
-                      </h3>
+                      
                         <div class="weathericon">
-                          <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="clear" id="icon">
+                          <img class="weathericon" src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="clear" id="icon">
                         </div>
+                        </h3>
                       </div>
                       </div>
 
