--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
           <div class="d-flex justify-content-around">  
             <div class="row" id="forecast">
                 <div class="col">
-                  <div class="card border-info mb-3" style="max-width: 9rem;">
+                  <div class="card border-info mb-3" style="max-width: 11rem;">
                     <div class="card-header">
                       
                     </div>
                     <div class="card-body text-info">
-                      <img/>
+                      <img class="forecast-icon"/>
                       <div class="forecast-temperature">
                         <strong>
                           
